# plaintext-daw

./: .gitignore  README.md
python/: pyproject.toml
python/plaintext_daw/: gui.py
tauri/: next.config.js  package-lock.json  package.json  tsconfig.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs  state.rs
tauri/src-tauri/src/commands/: home.rs  project.rs
tauri/src/components/: Layout.tsx
tauri/src/pages/: _app.tsx  index.tsx  project.tsx
